<resources>
    <string name="app_name">Splæsj</string>

    <!--    knapper for midlertidig navigering fra mainActivity (slettes sammen med koden)-->
    <string name="map">Kart</string>
    <string name="list">List</string>

    <!--    textViews-->
    <string name="tempC">%1$d °C</string>
    <string name="rain_mm">%1$f mm</string>
    <string name="place_rain">%1$d mm</string>
    <string name="not_available">Ikke tilgjengelig</string>
    <string name="no_data">Ingen data</string>
    <string name="no_weather_data">Ingen værdata</string>
    <string name="place_name">Badeplass</string>
    <string name="place_hour">kl. %1$s</string>
    <string name="place_currents">Havstrømninger</string>
    <string name="place_currents_result"><b>%1$s</b></string>
    <string name="place_info_weak"><b>Svak</b></string>
    <string name="place_info_moderate"><b>Moderat</b></string>
    <string name="place_info_strong"><b>Sterk</b></string>
    <string name="place_info_very_strong"><b>Svært sterk</b></string>
    <string name="place_info_extreme"><b>Ekstrem</b></string>
    <string name="place_currents_info">Informasjon om havstrømninger</string>
    <string name="place_currents_info_weak">0–0.4 m/s</string>
    <string name="place_currents_info_moderate">0.4–0.8 m/s</string>
    <string name="place_currents_info_strong">0.8–1.2 m/s</string>
    <string name="place_currents_info_very_strong">1.2–1.8 m/s</string>
    <string name="place_uv">UV-stråling</string>
    <string name="place_uv_result"><b>%1$s</b></string>
    <string name="place_uv_info_title">Informasjon om UV-stråling</string>
    <string name="place_uv_info_weak">UV–indeks: 1–2 \nTiltak: Ingen. Vær ute og nyt sola!</string>
    <string name="place_uv_info_moderate">UV-indeks: 3-5
        \nTiltak: Klær, solhatt og solbriller. Ta pauser fra sola!</string>
    <string name="place_uv_info_strong">UV-indeks: 6-7
        \nTiltak: Klær, solhatt og solbriller. Ta pauser fra solen mellom kl. 12-15.
        Bruk solkrem med middels faktor (SPF 15) og UVA-beskyttelse.</string>
    <string name="place_uv_info_very_strong"><b>UV-indeks: 8-10
        \nTiltak: Unngå solen mellom kl. 12-15 og søk skygge.
        Bruk klær, solhatt og solbriller.</b></string>
    <string name="place_uv_info_extreme">UV-indeks: >11
        \nTiltak: Unngå solen mellom kl. 12-15. Søk skygge.
        Klær, solhatt og solbriller absolutt nødvendig.</string>
    <string name="place_info_more"><u>Se mer på yr.no</u></string>
    <string name="place_forecast">Værvarsel</string>
    <string name="place_hour_forecast">Timesvarsel</string>
    <string name="place_long_forecast">Langtidsvarsel</string>
    <string name="place_public_transport_link"><u>Finn reise på ruter.no</u></string>
    <string name="place_select_route_type">Vis rute til badeplass:</string>
    <string name="aboutApp">Om Splæsj</string>
    <string name="aboutAPI">Om API</string>
    <string name="settingsTitle">Innstillinger</string>
    <string name="waterPreference">Preferanse for vanntemperatur</string>
    <string name="noFavorites">Du har ikke lagt til noen favorittbadeplasser enda!</string>
    <string name="aboutAppText">Splæsj er appen for deg som er glad i å bade i Oslo! Her har
        vi samlet relevant informasjon om værforhold, vanntemperatur og reisevei til forskjellige
        badeplasser på ett sted, for at det skal være enklere å ta et informert valg om hvilken
        badeplass som passer best for deg.
        \n\nSplæsj er designet og utviklet av Ellina Ivleva, Johanna P. Haarseth,
        Maria Løvland Johansson, Marlen Jarholt, Melanie Østbøll og Silje H. Lund. Appen er utviklet
        som en del av teamarbeidet i IN2000 - Software Engineering med prosjektarbeid ved Institutt
        for Informatikk, Universitetet i Oslo, våren 2020.</string>
    <string name="aboutAPIText"><b>MET</b>
        \nSplæsj bruker værdata fra WeatherAPI-et til Meteorologisk institutt.
        Dette gir appen informasjon om værforhold som lufttemperatur, UV-stråling
        og havstrømninger ved ulike badeplasser.
        \n\n<b>Mapbox</b>
        \nAPI som muliggjør opptegning av kart i appen, samt å vise reisevei fra en gitt posisjon
        til en badeplass.
        \n\n<b>Oslo kommune</b>
        \nSplæsj innhenter data om lokasjon og vanntemperatur for de ulike badeplassene ved å
        benytte API fra Oslo kommune.
    </string>
    <string name="aboutSettings">
        Målingene av badetemperaturene fra Oslo kommune er tilgjengelige mellom juni og august.
        Dersom du ønsker å teste de ulike funksjonalitetene i appen utenom denne perioden kan du
        slå på falske data. Det vil da bli lagt til tilfeldige verdier for vanntemperatur.
    </string>
    <string name="off">Av</string>
    <string name="on">På</string>
    <string name="from">Fra</string>
    <string name="to"> til</string>
    <string name="yourPosition">din posisjon</string>
    <string name="distance">Distanse:</string>
    <string name="time">Beregnet reisetid:</string>
    <string name="favorite">Favoritter</string>
    <string name="titleFilter">Filtrering</string>
    <string name="showPlacesWater">Vis badeplasser med:</string>
    <string name="coldWater"><b>Kaldt vann</b></string>
    <string name="warmWater"><b>Varmt vann</b></string>
    <string name="preferenceAir">Preferanse for lufttemperatur</string>
    <string name="showPlacesAir">Vis badeplasser med:</string>
    <string name="coldAir"><b>Lav lufttemperatur</b></string>
    <string name="hotAir"><b>Høy lufttemperatur</b></string>
    <string name="representationMap">Fargene på kartet representerer:</string>
    <string name="airTemp">Lufttemperatur</string>
    <string name="waterTemp">Vanntemperatur</string>
    <string name="empty"> </string>
    <string name="no_distance">"Kunne ikke finne reiselengde"</string>
    <string name="distance_m">%1$d m</string>
    <string name="distance_km">%1$.1f km</string>
    <string name="no_travel_time">Kunne ikke finne reisetid</string>
    <string name="travel_time_minutes">%1$d minutter</string>
    <string name="travel_time_hours">%1$d timer</string>
    <string name="travel_time_hours_minutes">%1$d timer og %2$d minutter</string>
    <string name="no_route_found">Fant ingen rute</string>
    <string name="empty_list">Kunne ikke finne noen badeplasser</string>
    <string name="no_place">Klarte ikke å finne plassen</string>

    <!--    buttons-->
    <string name="button_back">Trykk her for å gå tilbake</string>
    <string name="place_button_bike">Vis sykkelvei til badestedet</string>
    <string name="place_button_car">Vis bilvei til badestedet</string>
    <string name="place_button_walk">Vis gangvei til badestedet</string>
    <string name="place_button_info_currents">Vis informasjon om måling av havstrømninger</string>
    <string name="place_button_info_uv">Vis informasjon om måling av UV-stråling</string>
    <string name="place_button_close_info">Trykk her for å lukke infovinduet</string>
    <string name="infoRefreshButton">Oppdater rute</string>
    <string name="addFilter">Legg til filter</string>
    <string name="reset">Nullstill</string>
    <string name="filter_button">Trykk her for å filtrer badeplassene</string>
    <string name="rep_button_water">Hvis markert, vises markørene i kartet vanntempratur </string>
    <string name="rep_button_air">Hvis markert, vises markørene i kartet lufttempratur </string>
    <string name="map_no_internet">Ingen internettforbindelse</string>

    <!--    content description for images-->
    <string name="water_icon">Badevann ikon</string>
    <string name="weather_icon">Ikon som viser været</string>
    <string name="water_temp_icon">ikon som viser om vanntemperaturen er varm eller kald i forhold
        til gjeldende preferanser</string>
    <string name="empty_shark">En hai som symboliserer at du ikke har noen favoritter</string>
    <string name="search_image">Bilde av et forstørrelsesglass</string>
    <string name="map_no_internet_image">Symbol som viser at det ikke er noe internettforbindelse</string>
    <string name="no_internet_image">Symbol som viser at det ikke er noe internettforbindelse</string>
    <string name="place_weather_icon_description">Ikon som viser været: %1$s</string>
    <string name="place_icon_public_transport">Ikon for offentlig transport</string>

    <!--    map stuff-->
    <string name="access_token">sk.eyJ1IjoiamFyaG9sdCIsImEiOiJjazg0ZDBsMHkwMTN4M2prNzJpcHZnMXFkIn0.k3JYH8gx2QewGmE4Vf2GsQ</string>
    <string name="noCommute">Kan ikke vise vei uten lokasjon</string>
    <string name="needUsersPosition">Kan ikke vise veien til badeplassen uten din posisjon</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_favoritter">FAVORITTER</string>
    <string name="title_mer">MER</string>
    <string name="title_list">LISTE</string>
    <string name="title_map">KART</string>
    <string name="noMap">Klarte ikke å tegne opp ruten</string>


</resources>
