<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"

    tools:context=".ui.placesList.PlacesListFragment"
    >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_viewPlaces"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:paddingBottom="?attr/actionBarSize"

        app:layout_constraintTop_toBottomOf="@+id/searchLayer"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchLayer"
        android:layout_height="48dp"
        android:layout_width="match_parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recycler_viewPlaces"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:background="@drawable/gradient_search"
        >

        <ImageView
            android:id="@+id/searchImage"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:src="@drawable/search"
            android:contentDescription="@string/search_image" />

        <ImageButton
            android:id="@+id/filterButton"
            android:background="@color/backgroundDark"
            android:padding="4dp"

            android:layout_height="match_parent"
            android:layout_width="wrap_content"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:src="@drawable/filter_list"
            android:contentDescription="@string/filter_button" />

        <EditText
            android:id="@+id/searchText"

            android:background="@android:color/transparent"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="4dp"
            android:textCursorDrawable="@null"
            android:textColor="@color/mainTextColor"

            android:layout_height="wrap_content"
            android:layout_width="0dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/searchImage"
            app:layout_constraintRight_toLeftOf="@+id/filterButton"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no"
            android:inputType="textFilter"
            android:hint="@string/empty"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageEmptyListShark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:adjustViewBounds="true"
        android:gravity="center"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:src="@drawable/empty_favorites_shark"
        android:contentDescription="@string/empty_shark" />

    <TextView
        android:id="@+id/textNoElementInList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageEmptyListShark"

        android:text="@string/empty_list"
        android:textAlignment="center"
        />

</androidx.constraintlayout.widget.ConstraintLayout>