<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.directions.DirectionsActivity">


    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_constraintTop_toBottomOf="@id/topBar"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"

        android:layout_width="match_parent"
        android:layout_height="50dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:background="@color/backgroundDark"
        android:padding="6dp"
        >

        <ImageButton
            android:id="@+id/buttonBack"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:background="@color/transparent"
            android:contentDescription="@string/button_back"
            android:src="@drawable/arrow_left"/>

        <ImageButton
            android:id="@+id/buttonRefresh"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:background="@color/transparent"
            android:contentDescription="@string/infoRefreshButton"
            android:src="@drawable/refresh" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBarBorder"

        android:layout_width="match_parent"
        android:layout_height="1dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar"

        android:background="@color/topBarBorder"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBarBorder"
        android:layout_margin="12dp"

        app:cardCornerRadius="12dp"
        android:padding="12dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:background="@color/pinkIconColor"
            android:padding="4dp">

            <ImageButton
                android:id="@+id/buttonWalk"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="4dp"

                android:maxWidth="38dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"

                android:background="@color/pinkIconColor"
                android:contentDescription="@string/place_button_walk"
                android:padding="4dp"
                android:src="@drawable/directions_walk_white"/>

            <ImageButton
                android:id="@+id/buttonBike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonWalk"
                android:layout_margin="4dp"

                android:maxWidth="38dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"

                android:background="@color/pinkIconColor"
                android:contentDescription="@string/place_button_bike"
                android:padding="4dp"
                android:src="@drawable/directions_bike_white"/>

            <ImageButton
                android:id="@+id/buttonCar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonBike"
                android:layout_margin="4dp"

                android:maxWidth="38dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"

                android:background="@color/pinkIconColor"
                android:contentDescription="@string/place_button_car"
                android:padding="4dp"
                android:src="@drawable/directions_car_white"/>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/layoutAboutRoute"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="12dp"

        app:cardCornerRadius="12dp"

        android:visibility="gone">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="3"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:background="@color/backgroundLight"
            android:padding="18dp">

            <TextView
                android:id="@+id/textTitleRoute"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_column="0"
                android:layout_row="0"
                android:layout_columnSpan="2"

                android:ellipsize="end"
                android:fontFamily="@font/roboto_medium"
                android:maxLines="1"

                android:paddingBottom="4dp"

                android:textColor="@color/mainTextColor"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/titleDistance"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_column="0"
                android:layout_row="1"
                android:layout_marginEnd="12dp"

                android:fontFamily="@font/roboto_medium"
                android:text="@string/distance"
                android:textColor="@color/mainTextColor"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/textDistance"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_column="1"
                android:layout_row="1"
                android:layout_gravity="end"

                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/mainTextColor"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/titleTime"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_column="0"
                android:layout_row="2"

                android:fontFamily="@font/roboto_medium"
                android:text="@string/time"
                android:textColor="@color/mainTextColor"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/textTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_column="1"
                android:layout_row="2"
                android:layout_gravity="end"

                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/mainTextColor"
                android:textSize="14sp"/>
        </GridLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>