<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.more.MoreFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/aboutAppTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/about_rectangle"

                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/raleway_medium"

                android:padding="22dp"
                android:text="@string/aboutApp"
                android:textColor="@color/mainTextColor"
                android:textSize="34sp"
                app:layout_constraintLeft_toLeftOf="parent"

                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/aboutAppText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"

                app:layout_constraintTop_toBottomOf="@id/aboutAppTitle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                android:textSize="24sp"
                android:text="@string/aboutAppText"
                android:textColor="@color/mainTextColor"
                android:fontFamily="@font/roboto_medium"
                android:lineSpacingExtra="12sp"

                android:visibility="gone"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/aboutAPITitleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@id/aboutAppText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/aboutAPITitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="22dp"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"

                    android:text="@string/aboutAPI"
                    android:textSize="34sp"
                    android:textColor="@color/mainTextColor"
                    android:background="@drawable/about_rectangle"
                    android:fontFamily="@font/raleway_medium"

                    android:clickable="true"
                    android:focusable="true"
                    />

                <TextView
                    android:id="@+id/aboutAPIText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/aboutAPITitle"

                    android:fontFamily="@font/roboto_medium"
                    android:lineSpacingExtra="12sp"
                    android:padding="12dp"
                    android:text="@string/LoremImpsum"

                    android:textColor="@color/mainTextColor"
                    android:textSize="16sp"
                    android:visibility="gone"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>